# FFmpegTest

app/: build.gradle
app/src/androidTest/java/com/test/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  NEFFmpeg.cpp  NEFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/test/ffmpegtest/: MainActivity.java  NEPlayer.java
app/src/main/jni/: native-lib.c
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/test/ffmpegtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
